--- a/assets/admin/css/mallowmaps-panel.css
+++ b/assets/admin/css/mallowmaps-panel.css
@@ -113,3 +113,11 @@
     height: 400px;
     width: 100%;
 }
+
+#mowmap_places {
+    width: 100%;
+    padding: 20px 10px;
+    outline: none;
+    border: none;
+    box-shadow: none;
+}
